{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 3812,
  "lineage": "b21ca30c-4f41-1c73-1bea-628ff6b3b27c",
  "resources": [
    {
      "module": "module.ebs_volumes_nodes_manager",
      "mode": "data",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-04619c6915a564d38",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-04619c6915a564d38",
            "instance_id": "i-04619c6915a564d38",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "my-key-instances-linux",
            "launch_time": "2024-11-05T22:00:16Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-057fa7866c1521d67",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-4-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07cb379027d07d397",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fa8cc1b6767da4a",
            "tags": {
              "Name": "node-manager-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05d27fc820113ac98"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-074f0236c99fb123e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-074f0236c99fb123e",
            "instance_id": "i-074f0236c99fb123e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "my-key-instances-linux",
            "launch_time": "2024-11-05T22:00:16Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0d9f0af7190c8a919",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-5-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05a0a7947e0f3856b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09295a413b1f38e9c",
            "tags": {
              "Name": "node-manager-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05d27fc820113ac98"
            ]
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-0afd438d7b06849c6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-0afd438d7b06849c6",
            "instance_id": "i-0afd438d7b06849c6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "my-key-instances-linux",
            "launch_time": "2024-11-05T22:00:16Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-08328fd45fced0f5d",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-6-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01bda9c5641bc0d56",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c366ec5d8500f0c",
            "tags": {
              "Name": "node-manager-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05d27fc820113ac98"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ebs_volumes_nodes_worker",
      "mode": "data",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-0a627a8ed79d9d2f9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-0a627a8ed79d9d2f9",
            "instance_id": "i-0a627a8ed79d9d2f9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "my-key-instances-linux",
            "launch_time": "2024-11-05T22:00:16Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-08b1cee2698c859c2",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-4-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0758945e0427d5e7e",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fa8cc1b6767da4a",
            "tags": {
              "Name": "node-worker-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09bfe4cec61b6fb79"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-0917a0753425f6962",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-0917a0753425f6962",
            "instance_id": "i-0917a0753425f6962",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "my-key-instances-linux",
            "launch_time": "2024-11-05T22:00:16Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0cda6489aea851675",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-5-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bf6c4e2c90daaf52",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09295a413b1f38e9c",
            "tags": {
              "Name": "node-worker-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09bfe4cec61b6fb79"
            ]
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-042499449e1e9f4b6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-042499449e1e9f4b6",
            "instance_id": "i-042499449e1e9f4b6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "my-key-instances-linux",
            "launch_time": "2024-11-05T22:00:16Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-00d4e20d03e384dbb",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-6-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034d737d7d7b39785",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c366ec5d8500f0c",
            "tags": {
              "Name": "node-worker-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09bfe4cec61b6fb79"
            ]
          }
        }
      ]
    },
    {
      "module": "module.ec2_bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092f68ba911b18752",
            "arn": "arn:aws:ec2:us-east-1:772293640951:elastic-ip/eipalloc-092f68ba911b18752",
            "association_id": "eipassoc-0ac0215c895eb098c",
            "domain": "vpc",
            "id": "eipalloc-092f68ba911b18752",
            "instance": "i-046d42dd3551e58d5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01a30ed21aad4f543",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-184-73-154-212.compute-1.amazonaws.com",
            "public_ip": "184.73.154.212",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "data.aws_ami.template_ami_amz2_build_packer",
            "module.ec2_bastion.aws_instance.this",
            "module.public_subnets.aws_subnet.public-subnet",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.sg_bastion.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "null_resource.build_image_ami_template_packer"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-046d42dd3551e58d5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-046d42dd3551e58d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-lab-bastion-host",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a30ed21aad4f543",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e27be8d38097de7d",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0549f0faf68ce7852",
            "tags": {
              "Name": "bastion-1"
            },
            "tags_all": {
              "Name": "bastion-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d7e98d65d05a7237"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "data.aws_ami.template_ami_amz2_build_packer",
            "module.public_subnets.aws_subnet.public-subnet",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.sg_bastion.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "null_resource.build_image_ami_template_packer"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_nodes_manager",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-04619c6915a564d38",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-04619c6915a564d38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-instances-linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-057fa7866c1521d67",
            "private_dns": "ip-10-0-4-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07cb379027d07d397",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fa8cc1b6767da4a",
            "tags": {
              "Name": "node-manager-1"
            },
            "tags_all": {
              "Name": "node-manager-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d27fc820113ac98"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "data.aws_ami.template_ami_amz2_build_packer",
            "module.private_subnets.aws_subnet.private-subnet",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.sg_nodes_manager.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "null_resource.build_image_ami_template_packer"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-074f0236c99fb123e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-074f0236c99fb123e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-instances-linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d9f0af7190c8a919",
            "private_dns": "ip-10-0-5-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05a0a7947e0f3856b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09295a413b1f38e9c",
            "tags": {
              "Name": "node-manager-2"
            },
            "tags_all": {
              "Name": "node-manager-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d27fc820113ac98"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "data.aws_ami.template_ami_amz2_build_packer",
            "module.private_subnets.aws_subnet.private-subnet",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.sg_nodes_manager.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "null_resource.build_image_ami_template_packer"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-0afd438d7b06849c6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-0afd438d7b06849c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-instances-linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08328fd45fced0f5d",
            "private_dns": "ip-10-0-6-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01bda9c5641bc0d56",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c366ec5d8500f0c",
            "tags": {
              "Name": "node-manager-3"
            },
            "tags_all": {
              "Name": "node-manager-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d27fc820113ac98"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "data.aws_ami.template_ami_amz2_build_packer",
            "module.private_subnets.aws_subnet.private-subnet",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.sg_nodes_manager.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "null_resource.build_image_ami_template_packer"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_nodes_worker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-0a627a8ed79d9d2f9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-0a627a8ed79d9d2f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-instances-linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b1cee2698c859c2",
            "private_dns": "ip-10-0-4-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0758945e0427d5e7e",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fa8cc1b6767da4a",
            "tags": {
              "Name": "node-worker-1"
            },
            "tags_all": {
              "Name": "node-worker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09bfe4cec61b6fb79"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "data.aws_ami.template_ami_amz2_build_packer",
            "module.private_subnets.aws_subnet.private-subnet",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.sg_nodes_worker.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "null_resource.build_image_ami_template_packer"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-0917a0753425f6962",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-0917a0753425f6962",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-instances-linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cda6489aea851675",
            "private_dns": "ip-10-0-5-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bf6c4e2c90daaf52",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09295a413b1f38e9c",
            "tags": {
              "Name": "node-worker-2"
            },
            "tags_all": {
              "Name": "node-worker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09bfe4cec61b6fb79"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "data.aws_ami.template_ami_amz2_build_packer",
            "module.private_subnets.aws_subnet.private-subnet",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.sg_nodes_worker.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "null_resource.build_image_ami_template_packer"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07cd505e474eb90f6",
            "arn": "arn:aws:ec2:us-east-1:772293640951:instance/i-042499449e1e9f4b6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-lab",
            "id": "i-042499449e1e9f4b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-instances-linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00d4e20d03e384dbb",
            "private_dns": "ip-10-0-6-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-034d737d7d7b39785",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c366ec5d8500f0c",
            "tags": {
              "Name": "node-worker-3"
            },
            "tags_all": {
              "Name": "node-worker-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09bfe4cec61b6fb79"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "data.aws_ami.template_ami_amz2_build_packer",
            "module.private_subnets.aws_subnet.private-subnet",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.sg_nodes_worker.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "null_resource.build_image_ami_template_packer"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009e8dcf8588acfe7",
            "arn": "arn:aws:ec2:us-east-1:772293640951:elastic-ip/eipalloc-009e8dcf8588acfe7",
            "domain": "vpc",
            "id": "eipalloc-009e8dcf8588acfe7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-80-108-90.compute-1.amazonaws.com",
            "public_ip": "98.80.108.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-lab-nat-gw"
            },
            "tags_all": {
              "Name": "devops-lab-nat-gw"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009e8dcf8588acfe7",
            "association_id": "eipassoc-0e64fe55f7c861fad",
            "connectivity_type": "public",
            "id": "nat-05827b14a13522260",
            "network_interface_id": "eni-0142ddc66424d56e4",
            "private_ip": "10.0.1.154",
            "public_ip": "98.80.108.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0549f0faf68ce7852",
            "tags": {
              "Name": "devops-lab-nat-gw-nat-gateway"
            },
            "tags_all": {
              "Name": "devops-lab-nat-gw-nat-gateway"
            }
          },
          "dependencies": [
            "module.private_subnets.aws_eip.nat_eip",
            "module.public_subnets.aws_subnet.public-subnet",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:route-table/rtb-05ca054aa68cdbf95",
            "id": "rtb-05ca054aa68cdbf95",
            "owner_id": "772293640951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05827b14a13522260",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnets.aws_eip.nat_eip",
            "module.private_subnets.aws_nat_gateway.nat_gateway",
            "module.public_subnets.aws_subnet.public-subnet",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a04f3f42f08b0eb3",
            "route_table_id": "rtb-05ca054aa68cdbf95",
            "subnet_id": "subnet-07fa8cc1b6767da4a"
          },
          "dependencies": [
            "module.private_subnets.aws_eip.nat_eip",
            "module.private_subnets.aws_nat_gateway.nat_gateway",
            "module.private_subnets.aws_route_table.private_route_table",
            "module.private_subnets.aws_subnet.private-subnet",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.public_subnets.aws_subnet.public-subnet",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf3a94f5b1576d82",
            "route_table_id": "rtb-05ca054aa68cdbf95",
            "subnet_id": "subnet-09295a413b1f38e9c"
          },
          "dependencies": [
            "module.private_subnets.aws_eip.nat_eip",
            "module.private_subnets.aws_nat_gateway.nat_gateway",
            "module.private_subnets.aws_route_table.private_route_table",
            "module.private_subnets.aws_subnet.private-subnet",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.public_subnets.aws_subnet.public-subnet",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb1fab20fbb83581",
            "route_table_id": "rtb-05ca054aa68cdbf95",
            "subnet_id": "subnet-01c366ec5d8500f0c"
          },
          "dependencies": [
            "module.private_subnets.aws_eip.nat_eip",
            "module.private_subnets.aws_nat_gateway.nat_gateway",
            "module.private_subnets.aws_route_table.private_route_table",
            "module.private_subnets.aws_subnet.private-subnet",
            "module.private_subnets.data.aws_availability_zones.available",
            "module.public_subnets.aws_subnet.public-subnet",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:subnet/subnet-07fa8cc1b6767da4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fa8cc1b6767da4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772293640951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-lab-private-1"
            },
            "tags_all": {
              "Name": "devops-lab-private-1"
            },
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "dependencies": [
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:subnet/subnet-09295a413b1f38e9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09295a413b1f38e9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772293640951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-lab-private-2"
            },
            "tags_all": {
              "Name": "devops-lab-private-2"
            },
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "dependencies": [
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:subnet/subnet-01c366ec5d8500f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c366ec5d8500f0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772293640951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-lab-private-3"
            },
            "tags_all": {
              "Name": "devops-lab-private-3"
            },
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "dependencies": [
            "module.private_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:internet-gateway/igw-07c4928ca9e873677",
            "id": "igw-07c4928ca9e873677",
            "owner_id": "772293640951",
            "tags": {
              "Name": "devops-lab-internet-gw"
            },
            "tags_all": {
              "Name": "devops-lab-internet-gw"
            },
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:route-table/rtb-07ef8e584855c402c",
            "id": "rtb-07ef8e584855c402c",
            "owner_id": "772293640951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c4928ca9e873677",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnets.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f86fad986ed8c842",
            "route_table_id": "rtb-07ef8e584855c402c",
            "subnet_id": "subnet-0549f0faf68ce7852"
          },
          "dependencies": [
            "module.public_subnets.aws_internet_gateway.this",
            "module.public_subnets.aws_route_table.this",
            "module.public_subnets.aws_subnet.public-subnet",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f85e82dc492aa30d",
            "route_table_id": "rtb-07ef8e584855c402c",
            "subnet_id": "subnet-0085a00ec35d7c9b7"
          },
          "dependencies": [
            "module.public_subnets.aws_internet_gateway.this",
            "module.public_subnets.aws_route_table.this",
            "module.public_subnets.aws_subnet.public-subnet",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd02f4b674cba1c0",
            "route_table_id": "rtb-07ef8e584855c402c",
            "subnet_id": "subnet-0a1b9187a74bb4d31"
          },
          "dependencies": [
            "module.public_subnets.aws_internet_gateway.this",
            "module.public_subnets.aws_route_table.this",
            "module.public_subnets.aws_subnet.public-subnet",
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:subnet/subnet-0549f0faf68ce7852",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0549f0faf68ce7852",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772293640951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-lab-public-1"
            },
            "tags_all": {
              "Name": "devops-lab-public-1"
            },
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "dependencies": [
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:subnet/subnet-0085a00ec35d7c9b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0085a00ec35d7c9b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772293640951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-lab-public-2"
            },
            "tags_all": {
              "Name": "devops-lab-public-2"
            },
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "dependencies": [
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:subnet/subnet-0a1b9187a74bb4d31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1b9187a74bb4d31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772293640951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-lab-public-3"
            },
            "tags_all": {
              "Name": "devops-lab-public-3"
            },
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "dependencies": [
            "module.public_subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:security-group/sg-0d7e98d65d05a7237",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7e98d65d05a7237",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "772293640951",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_nodes_manager",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:security-group/sg-05d27fc820113ac98",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d27fc820113ac98",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              }
            ],
            "name": "swarm-nodes-manager",
            "name_prefix": "",
            "owner_id": "772293640951",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg_nodes_worker",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:security-group/sg-09bfe4cec61b6fb79",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bfe4cec61b6fb79",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              }
            ],
            "name": "swarm-nodes-worker",
            "name_prefix": "",
            "owner_id": "772293640951",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0008e3694564e24a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772293640951:vpc/vpc-0008e3694564e24a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0522f3f8dff6ab6bc",
            "default_route_table_id": "rtb-0994607ccbdf2ad40",
            "default_security_group_id": "sg-0ec4ae1e2f5f8a192",
            "dhcp_options_id": "dopt-077fe0256d84c5582",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0008e3694564e24a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0994607ccbdf2ad40",
            "owner_id": "772293640951",
            "tags": {
              "Name": "devops-lab"
            },
            "tags_all": {
              "Name": "devops-lab"
            }
          }
        }
      ]
    }
  ]
}